完善3.1获取教师时间选择